--- a/src/output.css
+++ b/src/output.css
@@ -554,8 +554,43 @@ video {
   display: none;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .m-auto {
   margin: auto;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-\[10\%\] {
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
+.my-\[13\%\] {
+  margin-top: 13%;
+  margin-bottom: 13%;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .ml-40 {
@@ -566,52 +601,48 @@ video {
   margin-left: 12rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
+.ml-\[100px\] {
+  margin-left: 100px;
 }
 
 .ml-\[40\%\] {
   margin-left: 40%;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.ml-\[45\%\] {
+  margin-left: 45%;
 }
 
 .mt-1 {
   margin-top: 0.25rem;
 }
 
-.ml-\[45\%\] {
-  margin-left: 45%;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.ml-\[\] {
-  margin-left: ;
-}
-
-.ml-20 {
-  margin-left: 5rem;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-11 {
   margin-top: 2.75rem;
 }
 
-.ml-16 {
-  margin-left: 4rem;
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
 }
 
 .mt-32 {
@@ -622,92 +653,68 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
+.mt-\[10\%\] {
+  margin-top: 10%;
 }
 
 .flex {
   display: flex;
 }
 
-.h-\[52px\] {
-  height: 52px;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[22px\] {
-  height: 22px;
+.hidden {
+  display: none;
 }
 
 .h-\[16px\] {
   height: 16px;
 }
 
-.h-\[\] {
-  height: ;
+.h-\[22px\] {
+  height: 22px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[52px\] {
+  height: 52px;
 }
 
 .h-\[556px\] {
   height: 556px;
 }
 
-.w-\[199px\] {
-  width: 199px;
+.h-\[900px\] {
+  height: 900px;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-\[130px\] {
   width: 130px;
 }
 
-.w-\[16px\] {
-  width: 16px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[810px\] {
-  width: 810px;
-}
-
 .w-\[154px\] {
   width: 154px;
-}
-
-.w-\[575px\] {
-  width: 575px;
 }
 
 .w-\[166px\] {
   width: 166px;
 }
 
-.w-\[100\%\] {
-  width: 100%;
+.w-\[16px\] {
+  width: 16px;
+}
+
+.w-\[199px\] {
+  width: 199px;
 }
 
 .w-\[285px\] {
@@ -718,33 +725,116 @@ video {
   width: 600px;
 }
 
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[810px\] {
+  width: 810px;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.max-w-screen-2xl {
+  max-width: 1536px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .content-center {
   align-content: center;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.items-center {
+  align-items: center;
 }
 
 .justify-center {
   justify-content: center;
 }
 
-.gap-\[30px\] {
-  gap: 30px;
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-\[14px\] {
+  gap: 14px;
 }
 
 .gap-\[20px\] {
   gap: 20px;
 }
 
+.gap-\[30px\] {
+  gap: 30px;
+}
+
+.gap-\[3px\] {
+  gap: 3px;
+}
+
+.gap-\[5\%\] {
+  gap: 5%;
+}
+
+.gap-\[90px\] {
+  gap: 90px;
+}
+
 .rounded-\[4px\] {
   border-radius: 4px;
+}
+
+.rounded-\[7px\] {
+  border-radius: 7px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
   border-width: 1px;
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+.border-r-2 {
+  border-right-width: 2px;
 }
 
 .border-\[\#7772F1\] {
@@ -752,13 +842,14 @@ video {
   border-color: rgb(119 114 241 / var(--tw-border-opacity, 1));
 }
 
-.bg-\[\#7772F1\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(119 114 241 / var(--tw-bg-opacity, 1));
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
-.bg-\[\] {
-  background-color: ;
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#1E212C\] {
@@ -766,37 +857,194 @@ video {
   background-color: rgb(30 33 44 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#7772F1\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(119 114 241 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#FFFFFF33\] {
   background-color: #FFFFFF33;
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-\[10\%\] {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.px-\[15\%\] {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+.px-\[8\%\] {
+  padding-left: 8%;
+  padding-right: 8%;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.py-\[10\%\] {
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+.py-\[8px\] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-\[20\%\] {
+  padding-top: 20%;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-\[72px\] {
-  font-size: 72px;
+.text-\[12px\] {
+  font-size: 12px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
+.text-\[17px\] {
+  font-size: 17px;
+}
+
+.text-\[30px\] {
+  font-size: 30px;
 }
 
 .text-\[32px\] {
   font-size: 32px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
 .text-\[46px\] {
   font-size: 46px;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-\[72px\] {
+  font-size: 72px;
 }
 
 .font-black {
   font-weight: 900;
 }
 
-.text-white {
+.font-bold {
+  font-weight: 700;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.text-\[\#1E212C\] {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  color: rgb(30 33 44 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#424551\] {
+  --tw-text-opacity: 1;
+  color: rgb(66 69 81 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#7672f162\] {
+  color: #7672f162;
 }
 
 .text-\[\#7772F1\] {
@@ -804,12 +1052,48 @@ video {
   color: rgb(119 114 241 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\#7672f162\] {
-  color: #7672f162;
+.text-\[\#787A80\] {
+  --tw-text-opacity: 1;
+  color: rgb(120 122 128 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\] {
-  color: ;
+.text-\[\#9A9CA5\] {
+  --tw-text-opacity: 1;
+  color: rgb(154 156 165 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#FFFFFF\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-filter {
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.hover\:bg-\[\#5f5cbd\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(95 92 189 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-green-500:hover {
@@ -817,27 +1101,32 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
 }
 
-@media (min-width: 0px) {
-  .mayda\:ml-6 {
-    margin-left: 1.5rem;
-  }
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
 
-  .mayda\:w-\[30px\] {
-    width: 30px;
+@media (min-width: 0px) {
+  .sm\:w-auto {
+    width: auto;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:ml-40 {
-    margin-left: 10rem;
+  .md\:ml-2 {
+    margin-left: 0.5rem;
   }
 
   .md\:ml-20 {
     margin-left: 5rem;
   }
 
-  .md\:ml-2 {
-    margin-left: 0.5rem;
+  .md\:ml-40 {
+    margin-left: 10rem;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:flex {
@@ -854,5 +1143,127 @@ video {
 
   .md\:w-\[575px\] {
     width: 575px;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:m-auto {
+    margin: auto;
+  }
+
+  .lg\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .lg\:ml-\[30\%\] {
+    margin-left: 30%;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:w-\[16\%\] {
+    width: 16%;
+  }
+
+  .lg\:w-\[25\%\] {
+    width: 25%;
+  }
+
+  .lg\:w-\[37\%\] {
+    width: 37%;
+  }
+
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .lg\:w-\[44\%\] {
+    width: 44%;
+  }
+
+  .lg\:w-\[47\%\] {
+    width: 47%;
+  }
+
+  .lg\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:max-w-\[99\%\] {
+    max-width: 99%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .lg\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
+  .lg\:pl-\[28\%\] {
+    padding-left: 28%;
+  }
+
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .lg\:pt-\[28\%\] {
+    padding-top: 28%;
+  }
+
+  .lg\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .lg\:text-\[22px\] {
+    font-size: 22px;
+  }
+
+  .lg\:text-\[45px\] {
+    font-size: 45px;
   }
 }
